--- a/languages/go/videos.org
+++ b/languages/go/videos.org
@@ -1,4 +1,4 @@
-* Videos
+- 2012 -  Obscure Go Optimisations - Bryan Boreham  https://www.youtube.com/watch?app=desktop&v=rRtihWOcaLI
 - https://earthly.dev/blog/golang-streamers/
 - GameDev with GO https://www.youtube.com/user/Velovix
 - Learn Go Programming - Golang Tutorial for Beginners
@@ -9,7 +9,7 @@
 - Tutorial: https://www.youtube.com/playlist?list=PLJbE2Yu2zumCe9cO3SIyragJ8pLmVv0z9
 - /r/golang/ favorite go conference talks https://www.reddit.com/r/golang/comments/ei54kv/what_are_your_favorite_go_conference_talks/
 - /r/golang/ youtube.com https://www.reddit.com/r/golang/search?q=site%3Ayoutube.com&restrict_sr=1&sort=top
-** Channels
+* Channels
 - GopherCon UK https://www.youtube.com/c/GopherConUK/videos
 - Learn To Code https://www.youtube.com/c/toddmcleod-learn-to-code/videos
 - Go Class https://www.youtube.com/channel/UCC2ot8w_U6yQsq7jdpbECvQ/videos
@@ -23,124 +23,7 @@
 - Gophercon Russia https://www.youtube.com/channel/UCq-OB01F8YnS-FJpeJRCvMQ/videos
 - Singapore Gophers https://www.youtube.com/channel/UCazkIMpjghmT8fugD1WF_DQ
 - ArdanLabs https://www.youtube.com/channel/UCCgGRKeRM1b0LTDqqb4NqjA/videos
-* TODO Video: Golang UK Conference 2015 - Andrew Gerrand - Stupid Gopher Tricks
-  https://www.youtube.com/watch?v=UECh7X07m6E
-  - struct{} is a type literal, on var foo struct{}
-    - sometimes used on anonymous structs
-    - used on template/json (when pulling a field) or enconding
-    - can be nested
-  - embeddes structs, inherit the methods of the childs
-  - anynoymous, interfaces, used for type assertion
-* TODO Video: GOTO 2020 • GraphQL, gRPC and REST, Oh My! A Method for Unified API Design (2020) / Mike Amundsen
-  https://www.youtube.com/watch?v=oG6-r3UdenE
-  Author of Book: "Design and Build Great Web APIs" (Prag Bookshelf)
-- Designing API/Experience
-  - Dealing with HTTP details, is implementation NOT design
-- Case study:
-  - Large company
-  - Pick OpenApi as the backbone of the practice
-* DONE Video: Intro to gRPC: A Modern Toolkit for Microservice Communication (2017)
-https://www.youtube.com/watch?v=RoXT_Rkg8LA
-REST: is the architectural principle (most use HTTP+JSON
-Implementations:
-  - C++/Java/Python/Go/Ruby/C#/Javascript/Objective-C/PHP
-  - C/Java/Go (real implementations, other are bindings)
-"Rest is actually not that great"
-  - No formal (machine-readable) API *contract*
-    - Writing client libraries requires humans
-    - Humans are expensive(?) and don't like writing client libraries
-  - *Streaming* is difficult.
-  - *Bi-directional streaming* isn't possible at all
-  - Operations are difficult to *model*
-  - *Inefficient* (text isn't optimal for networks)
-  - Internal services aren't RESTful, they are just HTTP endpoints (?)
-Written in IDL (Interface Definition Language)
-  - While protobuf defines the data, gRPC defines interface and data for accepted and returned by it
-  - Machine readable
-  - Can be compiled
-    - Into Client libraries
-    - Combined with a server stub (to create your tcp server of your protocol in few lines).
-Alternatives
-  - WSDL, tried to do this in the past for SOAP.
-    - Tied to XML
-  - Swagger:
-    - Machine readable (on json...)
-    - Still http/json (performance, streaming, modeling problems still present)
-  - Thrift
-    - less documented?
-Born from Google's Project "stubby".
-What really *IS*:
-  - Built on top of HTTP/2
-  - protobuf serialization
-  - Allows client/server side streaming
-*Interceptors* that are kind of "middleware" (on the http.Context sense of the word)
-  - Can be used to add logging
-  - On the server or client
-Problems:
-  - Load Balancing (needs to be a grpc aware lb)
-  - Error handling is bad (no easy to add details of the error)
-  - No support for browser JS
-  - Breaking API changes (grpc side)
-* DONE Video: Things In Go I Never Use (2018) / Mat Ryer
-  https://www.youtube.com/watch?v=5DVV36uqQ4E
-  Author of "Go Programming Blueprints"
-- Arrays
-- http.Handler, insted use http.HandlerFunc. So no need to implement the Serve(),
-                we just need a function that return a http.HandlerFunc
-  Might get slower on initialization: but with *var init Sync.Once* it solves it
-- Keywords: goto, fallthrough, else
-  - *goto*, the code gets difficult to "see". "Ok", when small and local.
-  - *else*, don't for glanceability
-  - *new*, just *AThing{}* or *var thing Athing*
-- Build-In Functions: cap, complex, imag, new, panic, real, print, println
-  - *panic*, only panic to give a better panic(), like with an argument explaining what happned
-* DONE Video: dotGo 2014 - John Graham-Cumming - I came for the easy concurrency I stayed for the easy composition
-- Problem: identify if site is cloudflare or not (check NS)
-  #+begin_src go
-type lookup struct {
-  name       string
-  err        error
-  cloudflare bool
-}
-  #+end_src
-- Problem: score exit tor nodes and score them on *Project Honeypot*
-  Reusing code above with interfaces.
-  With the ~factory pattern~.
-  #+begin_src go
-type factory interface {
-  make(line string) task
-}
-type task interface {
-  process()
-  print()
-}
-
-type lookupFactory struct {
-}
-func (f *lookupFactory) make(line string) task {
-  return &lookup{name: line}
-}
-
-type lookup struct {
-  name string
-  err error
-  cloudflare bool
-}
-func (l +lookup) process() {
-  nss, err := net.LookupNS(l.name)
-  if err != nil {
-    l.err = err
-  } else {
-    for _, ns := range nss {
-        if strings.HasSuffix(ns.Host, ".ns.cloudflare.com") {
-          l.cloudflare = true
-          break
-        }
-    }
-  }
-}
-  #+end_src
-* DONE Video: 2012 - Rob Pike - Go Concurrency Patterns
+* 12 | Rob Pike - Go Concurrency Patterns
 Channels are first class values
 ** Generator - 15:52
 - "like having a service"
@@ -158,8 +41,8 @@ Channels are first class values
     c := make(chan string)
     go func() {
       for i := 0; ; i++ {
-        c <- fmt.Sprintf("%s %d, msg, i)
-        time.Sleep(time.Duration(rand.Intn(1e3)) * time.Millisecond)
+        c <- fmt.Sprintf("%s %d", msg, i)
+        time.Sleep(time.Duration(rand.Int(1e3)) * time.Millisecond)
       }
     }()
     return c
@@ -299,79 +182,7 @@ for i := 0; i < 3; i++ {
 - goloadbalancer https://www.youtube.com/watch?v=jgVhBThJdXc
 - gosieve https://github.com/aht/gosieve
 - gopowerseries https://go.dev/test/chan/powser1.go
-* TODO Video: Practical Go: Real world advice for writing maintainable Go programs / Dave Cheney (2019)
-  https://www.youtube.com/watch?v=gi7t6Pl9rxE
-  https://dave.cheney.net/practical-go/presentations/qcon-china.html
-- "Waterfall way of writting books" (how books are written?)
-- Bryan Cantrill talk about operative systems (LINK??)
-** Identifiers
-- Names have an *oversized* impact in go
-- consise
-  descriptive, on vars "how" is used not "what" it has, on methods "what" it does not "how"
-  predictable
-- DO not short already short names, like oid to just o
-- Avoid naming with:
-  | do NOT                           | instead                           |
-  |----------------------------------+-----------------------------------|
-  | companiesMap map[string]*Company | companies map[string]*Company     |
-  | config Config*                   | c Config* or conf *Config         |
-  | config1 Config*, config2 Config* | original Config*, updated Config* |
-  | context context.Context          | ctx context.Context               |
-- "a" and "b" are usually names given to variables that are going to be compared
-** Comments
-"Good code has a lot comments, bad code requires a lot of comments" -- Dave Thomas (on The Pragmatic Programmer)
-- Start writting the comment fo rthe function.
-  - If you found an *and* while writing the function, it is doing 2 things, and needs refactoring.
-- Comment exported symbols
-  - NOT implementation of an interface
-** Package Design
-- "Your one word elevator pitch word to define your package"
-- Unique (a name that needs a partner like, client and server, is likely not a good name)
-1:18:32
-* TODO Video: Will contracts replace interfaces? / Francesc Campoy (2019)
-  https://www.youtube.com/watch?v=E75b9kuyRKw
-  - Go has 2 types, abstract or concrete.
-  - Interfaces
-    - Canonical examples of interfaces are Reader/Writer with Read/Write methods.
-    - They create a "set" of types
-      - Can define an "union" interface of those interfaces
-      - The ~empty interface~ interface{} "contains" all the types
-    - You can translate some of the behaviour of something (an object in other languages)
-        to an interface with methods associated.
-      Like a Stack which has Pop, Push, Empty methods.
-    - And then you have algoritms that can work with that interface.
-    - However there are types that are not completely defined by JUST an interface. So it is
-      kind of an incomplete idea.
-    - "Return concrete types, accept interfaces"
-  - Call Dispatch: f.Do()
-  - Interception Points: when an interface is provided for a struct type, the methods
-    of the interface are the interception points.
-  - ~Implicit interface satisfaction~ no implements. Instead of import the type of the interface you can declare it
-    locally. "give me something that can Eval() or Pop() ... etc"
-* DONE Video: 7 common mistakes in Go and when to avoid them / Steve Francia (2015)
-  https://www.youtube.com/watch?v=29LLRKIL_TI
-  - Types can express State and Behavior
-    - State = struct
-    - Behavior = interface
-  - (Below are translated as DO)
-    1) Accept interfaces parameters:
-        Example: instead of translated a buffer to .Bytes()
-                 just send it and accept the interface as argument
-    2) Use io.Reader, io.Writer
-    3) Do not abuse broader interfaces, use the smaller for the job
-    4) Methods vs Functions
-       - functions do not depend of state or do not change it, same input same output.
-         Can accept interfaces
-       - method defines a behaviour of a type, depend of the state.
-         Bound to a type.
-    5) pointer vs value: shared access vs value copied
-    6) Custom error: implement the interface when needed
-    7) Know what is Safe and what is Unsafe
-* TODO Video: Going Infinite, handling 1 millions websockets connections in Go / Eran Yanay
-  https://www.youtube.com/watch?v=LI1YTFMi8W4
-  https://github.com/eranyanay/1m-go-websockets
-- First problem is not having long lived connections. (ignores keep alive?)
-* Video: 2013 - Campoy - Go: Code that GFrows with Grace
+* 13 | Campoy - Go: Code that GFrows with Grace
   https://www.youtube.com/watch?v=bj6EtLacsj8
 - 9:26 concurrent echo tcp server
   #+begin_src go
@@ -397,42 +208,49 @@ func main() {
   }
 }
   #+end_src
-* Video: Golang University
-  https://www.youtube.com/playlist?list=PLEcwzBXTPUE_5m_JaMXmGEFgduH8EsuTs
-** 2016 - Mat Ryer - Idiomatic Go Tricks - Golang UK Conference
-   - No empty lines
-   - Line of sight: 1 indentation at most
-     - Make the happy treturn the last statement if possible
-   - Single method interfaces
-     - Function type alternatives for single method interfaces (like HandlerFunc)
-     - can also use them as a slice of interface
-   - Log Blocks
-     log.Println("----")
-     defer log.Println("----")
-   - return teardown functions as an argument
-     - so it can be immediatly defer after assigment
-   - You can check if a element implements an interface.
-     #+begin_src go
-                          // where v is an interface{}
-     obj, ok := v.(Valid) // where Valid is an interface, that implements OK()
-     if !ok {
-       return nil // no OK method
-     }
-     #+end_src
-   - Sometimes somebody elese provides the struct (and not the interface)
-     - Make your own interface
-   - We can leave the receiver part of a method empty, just specify the type
-   - We can use channels as semaphores to limit the ammount of work.
-** TODO 2019 - Dave Cheney - Clear is better than clever - GopherCon SG
-   https://www.youtube.com/watch?v=NwEuRO_w8HE
-   - Source code is the intermediate form, between the idea and what the machine does
-   - Readability is subjective
-   - Clarity != Readability
-   - you can either use new() or &Thing{}
-   - When you see something complicated, it should be complicated
-     12:00
+* 14 | John Graham-Cumming - I came for the easy concurrency I stayed for the easy composition
+** Problem: score exit tor nodes and score them on *Project Honeypot*
+Identify if site is cloudflare or not (check NS)
+Reusing code above with interfaces.
+With the ~factory pattern~.
+#+begin_src go
+  type lookup struct {
+    name string
+    err error
+    cloudflare bool
+  }
 
-* Video: 2015 | The Go Programming Language | Brian Will
+  type factory interface {
+    make(line string) task
+  }
+
+  type task interface {
+    process()
+    print()
+  }
+
+  type lookupFactory struct {
+  }
+
+  func (f *lookupFactory) make(line string) task {
+    return &lookup{name: line}
+  }
+
+  func (l +lookup) process() {
+    nss, err := net.LookupNS(l.name)
+    if err != nil {
+      l.err = err
+    } else {
+      for _, ns := range nss {
+          if strings.HasSuffix(ns.Host, ".ns.cloudflare.com") {
+            l.cloudflare = true
+            break
+          }
+      }
+    }
+  }
+  #+end_src
+* 15 | The Go Programming Language | Brian Will
 ** 1 https://www.youtube.com/watch?v=UvpSDtbdGDM
 - _var_ syntax for type inference on declaration
   #+begin_src go
@@ -578,3 +396,181 @@ func main() {
 - you run code based on the type of the variable using:
   1) =type assertions= (with if/else)
   2) or =type switches= (with switch/case/default)
+* 15 | 7 common mistakes in Go and when to avoid them / Steve Francia (2015)
+  https://www.youtube.com/watch?v=29LLRKIL_TI
+  - Types can express State and Behavior
+    - State = struct
+    - Behavior = interface
+  - (Below are translated as DO)
+    1) Accept interfaces parameters:
+        Example: instead of translated a buffer to .Bytes()
+                 just send it and accept the interface as argument
+    2) Use io.Reader, io.Writer
+    3) Do not abuse broader interfaces, use the smaller for the job
+    4) Methods vs Functions
+       - functions do not depend of state or do not change it, same input same output.
+         Can accept interfaces
+       - method defines a behaviour of a type, depend of the state.
+         Bound to a type.
+    5) pointer vs value: shared access vs value copied
+    6) Custom error: implement the interface when needed
+    7) Know what is Safe and what is Unsafe
+* TODO 15 | Golang UK Conference 2015 - Andrew Gerrand - Stupid Gopher Tricks
+  https://www.youtube.com/watch?v=UECh7X07m6E
+  - struct{} is a type literal, on var foo struct{}
+    - sometimes used on anonymous structs
+    - used on template/json (when pulling a field) or enconding
+    - can be nested
+  - embeddes structs, inherit the methods of the childs
+  - anynoymous, interfaces, used for type assertion
+* 17 | Intro to gRPC: A Modern Toolkit for Microservice Communication (2017)
+https://www.youtube.com/watch?v=RoXT_Rkg8LA
+REST: is the architectural principle (most use HTTP+JSON
+Implementations:
+  - C++/Java/Python/Go/Ruby/C#/Javascript/Objective-C/PHP
+  - C/Java/Go (real implementations, other are bindings)
+"Rest is actually not that great"
+  - No formal (machine-readable) API *contract*
+    - Writing client libraries requires humans
+    - Humans are expensive(?) and don't like writing client libraries
+  - *Streaming* is difficult.
+  - *Bi-directional streaming* isn't possible at all
+  - Operations are difficult to *model*
+  - *Inefficient* (text isn't optimal for networks)
+  - Internal services aren't RESTful, they are just HTTP endpoints (?)
+Written in IDL (Interface Definition Language)
+  - While protobuf defines the data, gRPC defines interface and data for accepted and returned by it
+  - Machine readable
+  - Can be compiled
+    - Into Client libraries
+    - Combined with a server stub (to create your tcp server of your protocol in few lines).
+Alternatives
+  - WSDL, tried to do this in the past for SOAP.
+    - Tied to XML
+  - Swagger:
+    - Machine readable (on json...)
+    - Still http/json (performance, streaming, modeling problems still present)
+  - Thrift
+    - less documented?
+Born from Google's Project "stubby".
+What really *IS*:
+  - Built on top of HTTP/2
+  - protobuf serialization
+  - Allows client/server side streaming
+*Interceptors* that are kind of "middleware" (on the http.Context sense of the word)
+  - Can be used to add logging
+  - On the server or client
+Problems:
+  - Load Balancing (needs to be a grpc aware lb)
+  - Error handling is bad (no easy to add details of the error)
+  - No support for browser JS
+  - Breaking API changes (grpc side)
+* 18 | Things In Go I Never Use (2018) / Mat Ryer
+  https://www.youtube.com/watch?v=5DVV36uqQ4E
+  Author of "Go Programming Blueprints"
+- Arrays
+- http.Handler, insted use http.HandlerFunc. So no need to implement the Serve(),
+                we just need a function that return a http.HandlerFunc
+  Might get slower on initialization: but with *var init Sync.Once* it solves it
+- Keywords: goto, fallthrough, else
+  - *goto*, the code gets difficult to "see". "Ok", when small and local.
+  - *else*, don't for glanceability
+  - *new*, just *AThing{}* or *var thing Athing*
+- Build-In Functions: cap, complex, imag, new, panic, real, print, println
+  - *panic*, only panic to give a better panic(), like with an argument explaining what happned
+* TODO 19 | Practical Go: Real world advice for writing maintainable Go programs / Dave Cheney (2019)
+  https://www.youtube.com/watch?v=gi7t6Pl9rxE
+  https://dave.cheney.net/practical-go/presentations/qcon-china.html
+- "Waterfall way of writting books" (how books are written?)
+- Bryan Cantrill talk about operative systems (LINK??)
+** Identifiers
+- Names have an *oversized* impact in go
+- consise
+  descriptive, on vars "how" is used not "what" it has, on methods "what" it does not "how"
+  predictable
+- DO not short already short names, like oid to just o
+- Avoid naming with:
+  | do NOT                           | instead                           |
+  |----------------------------------+-----------------------------------|
+  | companiesMap map[string]*Company | companies map[string]*Company     |
+  | config Config*                   | c Config* or conf *Config         |
+  | config1 Config*, config2 Config* | original Config*, updated Config* |
+  | context context.Context          | ctx context.Context               |
+- "a" and "b" are usually names given to variables that are going to be compared
+** Comments
+"Good code has a lot comments, bad code requires a lot of comments" -- Dave Thomas (on The Pragmatic Programmer)
+- Start writting the comment fo rthe function.
+  - If you found an *and* while writing the function, it is doing 2 things, and needs refactoring.
+- Comment exported symbols
+  - NOT implementation of an interface
+** Package Design
+- "Your one word elevator pitch word to define your package"
+- Unique (a name that needs a partner like, client and server, is likely not a good name)
+1:18:32
+* TODO 19 | Will contracts replace interfaces? / Francesc Campoy (2019)
+  https://www.youtube.com/watch?v=E75b9kuyRKw
+  - Go has 2 types, abstract or concrete.
+  - Interfaces
+    - Canonical examples of interfaces are Reader/Writer with Read/Write methods.
+    - They create a "set" of types
+      - Can define an "union" interface of those interfaces
+      - The ~empty interface~ interface{} "contains" all the types
+    - You can translate some of the behaviour of something (an object in other languages)
+        to an interface with methods associated.
+      Like a Stack which has Pop, Push, Empty methods.
+    - And then you have algoritms that can work with that interface.
+    - However there are types that are not completely defined by JUST an interface. So it is
+      kind of an incomplete idea.
+    - "Return concrete types, accept interfaces"
+  - Call Dispatch: f.Do()
+  - Interception Points: when an interface is provided for a struct type, the methods
+    of the interface are the interception points.
+  - ~Implicit interface satisfaction~ no implements. Instead of import the type of the interface you can declare it
+    locally. "give me something that can Eval() or Pop() ... etc"
+* TODO 19 | Going Infinite, handling 1 millions websockets connections in Go / Eran Yanay
+  https://www.youtube.com/watch?v=LI1YTFMi8W4
+  https://github.com/eranyanay/1m-go-websockets
+- First problem is not having long lived connections. (ignores keep alive?)
+* TODO 20 | GraphQL, gRPC and REST, Oh My! A Method for Unified API Design (2020) / Mike Amundsen
+  https://www.youtube.com/watch?v=oG6-r3UdenE
+  Author of Book: "Design and Build Great Web APIs" (Prag Bookshelf)
+- Designing API/Experience
+  - Dealing with HTTP details, is implementation NOT design
+- Case study:
+  - Large company
+  - Pick OpenApi as the backbone of the practice
+* Golang University
+  https://www.youtube.com/playlist?list=PLEcwzBXTPUE_5m_JaMXmGEFgduH8EsuTs
+** 2016 - Mat Ryer - Idiomatic Go Tricks - Golang UK Conference
+   - No empty lines
+   - Line of sight: 1 indentation at most
+     - Make the happy treturn the last statement if possible
+   - Single method interfaces
+     - Function type alternatives for single method interfaces (like HandlerFunc)
+     - can also use them as a slice of interface
+   - Log Blocks
+     log.Println("----")
+     defer log.Println("----")
+   - return teardown functions as an argument
+     - so it can be immediatly defer after assigment
+   - You can check if a element implements an interface.
+     #+begin_src go
+                          // where v is an interface{}
+     obj, ok := v.(Valid) // where Valid is an interface, that implements OK()
+     if !ok {
+       return nil // no OK method
+     }
+     #+end_src
+   - Sometimes somebody elese provides the struct (and not the interface)
+     - Make your own interface
+   - We can leave the receiver part of a method empty, just specify the type
+   - We can use channels as semaphores to limit the ammount of work.
+** TODO 2019 - Dave Cheney - Clear is better than clever - GopherCon SG
+   https://www.youtube.com/watch?v=NwEuRO_w8HE
+   - Source code is the intermediate form, between the idea and what the machine does
+   - Readability is subjective
+   - Clarity != Readability
+   - you can either use new() or &Thing{}
+   - When you see something complicated, it should be complicated
+     12:00
+
