--- a/languages/lisp/clojure/babashka.org
+++ b/languages/lisp/clojure/babashka.org
@@ -1,3 +1,4 @@
+- Code: 2022 htmx hiccup server example https://github.com/babashka/babashka/blob/master/examples/htmx_todoapp.clj
 - Libraries
   https://babashka.org/toolbox/
 - Pods
