--- a/languages/lua/lua.org
+++ b/languages/lua/lua.org
@@ -1,9 +1,17 @@
-- love2d tutorials https://www.youtube.com/channel/UCcq3KOawHtjyN0ibjL4RzXQ
 - https://learnxinyminutes.com/docs/lua/
 - https://lua.programmingpedia.net/
 - http://lua-users.org/wiki/VarargTheSecondClassCitizen
-- Pico-8 Tutorial - Shmup
-  https://www.youtube.com/playlist?list=PLea8cjCua_P3Sfq4XJqNVbd1vsWnh7LZd
+- https://fly.io/docs/app-guides/openresty-nginx-plus-lua/
+* Language
+** Standard Library
+"This is a collection of Lua libraries for Lua 5.1 (including LuaJIT), 5.2 and 5.3."
+source https://github.com/lua-stdlib/lua-stdlib
+doc https://lua-stdlib.github.io/lua-stdlib/
+- ??? none of this works on my lua installation
+  $ lua -v
+   Lua 5.3.5  Copyright (C) 1994-2018 Lua.org, PUC-Rio
+  $ luajit -v
+   LuaJIT 2.1.0-beta3 -- Copyright (C) 2005-2017 Mike Pall. http://luajit.org/
 * mpv
 - https://mpv.io/manual/master/#lua-scripting
   https://mpv.io/manual/master/#list-of-input-commands
