--- a/languages/rust/rust.org
+++ b/languages/rust/rust.org
@@ -44,6 +44,16 @@
 - https://research.mozilla.org/rust/
 * Language
 ** Types
+*** Primitive
+| u8    | 1u8 |   |
+| i32   |  10 |   |
+| i64   |   ? |   |
+| f64   |  5. |   |
+| isize |  10 |   |
+| usize |  10 |   |
+| char  | 'a' |   |
+
+*** Compound
 |---------+----------------+-----------+--------------+-------------------|
 |         | Create         | Access    | Match        | Insert            |
 |---------+----------------+-----------+--------------+-------------------|
